<resources>
    <string name="app_name">ArcFaceDemo</string>
    <string name="page_preview">人脸属性检测（视频）</string>
    <string name="face_recognize_mode">人脸比对1:n（视频vs人脸库）</string>
    <string name="page_single_image">人脸属性检测（图片）</string>
    <string name="page_multi_image">人脸比对1:n（图片vs图片）</string>
    <string name="start_process">开始处理</string>
    <string name="choose_local_image">选择本地图片</string>
    <string name="choose_main_image">选择主图</string>
    <string name="add_item_image">添加比对图</string>
    <string name="processing">处理中</string>
    <string name="get_picture_failed">获取图片失败</string>
    <string name="permission_denied">权限被拒绝！</string>
    <string name="active_engine">激活引擎</string>
    <string name="active_success">激活引擎成功</string>
    <string name="already_activated">引擎已激活，无需再次激活</string>
    <string name="active_failed">引擎激活失败，错误码为 %d</string>
    <string name="init_failed">引擎初始化失败，错误码为 %d</string>
    <string name="engine_not_initialized">引擎未初始化，错误码为 %d</string>
    <string name="notice_choose_main_img">请先选择主图</string>
    <string name="compare_failed">比对失败，错误码为 %d</string>
    <string name="register">注册</string>
    <string name="liveness_detect">活体检测</string>
    <string name="face_manage">人脸批量注册管理</string>
    <string name="batch_register">批量注册</string>
    <string name="notification_register">请将需要注册的图片放在\nsdcard/arcfacedemo/register\n目录下</string>
    <string name="registering_please_wait">注册中，请稍等</string>
    <string name="clear_faces">清空人脸库</string>
    <string name="no_face_need_to_delete">无人脸需要删除</string>
    <string name="notification">提示</string>
    <string name="confirm_delete">确认删除这%d张图片及人脸特征？</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="ft_op_0">视频模式仅检测0度</string>
    <string name="ft_op_90">视频模式仅检测90度</string>
    <string name="ft_op_180">视频模式仅检测180度</string>
    <string name="ft_op_270">视频模式仅检测270度</string>
    <string name="ft_op_all">视频模式全方向人脸检测</string>
    <string name="bt_facelogin">人脸识别登录</string>
    <string name="cb_repass">记住密码</string>
    <string name="bt_findpass">忘记密码？</string>
    <string name="head">个人加密备忘录</string>
    <string name="login">登录</string>
    <string name="reg">注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
</resources>
