<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorView"
    tools:context="com.example.g.personalmemo.activity.LoginActivity">
    <TextView
        android:id="@+id/textvi"
        android:layout_marginTop="140dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textSize="23sp"
        android:text="@string/head"
        />
    <RelativeLayout
        android:layout_marginTop="40dp"
        android:id="@+id/rl_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textvi"
        android:background="@color/colorLogBack"
        >
        <ImageView
            android:id="@+id/iv_userIconName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="15dp"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:src="@mipmap/im_user" />
        <View
            android:id="@+id/viewName"
            android:layout_centerVertical="true"
            android:layout_width="1dip"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/iv_userIconName"
            android:background="@color/colorView"
            />
        <EditText
            android:id="@+id/account"
            android:textCursorDrawable="@drawable/cursor_color"
            android:theme="@style/MyEditText"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:ems="15"
            android:hint="@string/username"
            android:layout_toRightOf="@id/viewName"
            android:background="@null"
            android:layout_marginLeft="10dp"
            />
        <ImageView
            android:id="@+id/iv_pwdClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:visibility="invisible"
            android:src="@mipmap/im_backspace"
            />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_userPassword"
        android:layout_below="@id/rl_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/colorLogBack"
        >
        <ImageView
            android:id="@+id/iv_passIconName"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:src="@mipmap/im_password"
            />
        <View
            android:id="@+id/viewPassword"
            android:layout_centerVertical="true"
            android:layout_width="1dip"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/iv_passIconName"
            android:background="@color/colorView"
            />
        <EditText
            android:id="@+id/password"
            android:textCursorDrawable="@drawable/cursor_color"
            android:theme="@style/MyEditText"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/viewPassword"
            android:background="@null"
            android:ems="15"
            android:hint="@string/password"
            android:inputType="textPassword"

            />
        <ImageView
            android:id="@+id/iv_pwdClear2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:src="@mipmap/im_backspace"
            android:visibility="invisible"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/buttonpant"
        android:layout_below="@+id/rl_userPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >
        <Button
            android:id="@+id/log"
            android:text="@string/login"
            android:textColor="#fff"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorLogButton"
            />

        <Button
            android:id="@+id/reg"
            android:text="@string/reg"
            android:textColor="#fff"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="120dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorLogButton"
            />
    </RelativeLayout>
    <Button
        android:id="@+id/getpassword"
        android:text="@string/bt_findpass"
        android:textSize="12sp"
        android:layout_marginLeft="150dp"
        android:layout_below="@+id/buttonpant"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#00000000"
        />
    <CheckBox
        android:id="@+id/remember"
        android:layout_marginTop="315dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/cb_repass"
        android:textColor="#666666"
        android:textSize="15sp"
        android:buttonTint="@color/colorLogButton"
        />

    <ImageView
        android:id="@+id/logimg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rl_userName"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:src="@mipmap/im_logphoto" />
    <Button
        android:id="@+id/facelogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_facelogin"
        android:textSize="12sp"
        android:layout_below="@+id/buttonpant"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:background="#00000000"
        />
</RelativeLayout>
